[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/AsteroidEmitter.gd" type="Script" id=1]
[ext_resource path="res://scripts/Location_Cosmos.gd" type="Script" id=2]
[ext_resource path="res://scripts/AsteroidEmitterFrontal.gd" type="Script" id=3]
[ext_resource path="res://models/transport/LifeBoat.tscn" type="PackedScene" id=4]
[ext_resource path="res://models/planet/RingOfSimbad/RingOfSimbad.tscn" type="PackedScene" id=5]
[ext_resource path="res://materials/Location_Orbit.tres" type="Environment" id=6]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( -1, -1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1 )

[node name="Location_Orbit" type="Node"]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 6 )

[node name="RemoteTransform" type="RemoteTransform" parent="."]
remote_path = NodePath("../Player/AsteroidEmitterBase")
update_rotation = false
update_scale = false

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -0.480177, 0.877171, 0, -0.877171, -0.480177, 0, 74.8234, 0 )
projection = 1
size = 80.0
far = 10000.0

[node name="Player" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 51.8767 )

[node name="LifeBoat" parent="Player" instance=ExtResource( 4 )]

[node name="Position3D_InterpolatedCamera" type="Position3D" parent="Player/LifeBoat"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.198, -10.9883 )

[node name="RemoteTransform" type="RemoteTransform" parent="Player/LifeBoat"]
remote_path = NodePath("../../AsteroidEmitterBase")
update_rotation = false
update_scale = false

[node name="AsteroidEmitterFrontal" type="Position3D" parent="Player/LifeBoat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 59.6955 )
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Player/LifeBoat/AsteroidEmitterFrontal"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="TimerEmitterFrontal" type="Timer" parent="Player/LifeBoat/AsteroidEmitterFrontal"]

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="Player"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1.2, -7.61523 )
current = true
near = 0.01
far = 300.0
target = NodePath("../LifeBoat/Position3D_InterpolatedCamera")
speed = 7.0
enabled = true

[node name="AsteroidEmitterBase" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 4.47035e-08, 0, 1, 0, -4.47035e-08, 0, 1, 0, 0, -51.8767 )
script = ExtResource( 1 )

[node name="AsteroidEmitter" type="Position3D" parent="Player/AsteroidEmitterBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 47.6 )

[node name="MeshInstance" type="MeshInstance" parent="Player/AsteroidEmitterBase/AsteroidEmitter"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="TimerEmitter" type="Timer" parent="Player/AsteroidEmitterBase"]
autostart = true

[node name="Area" type="Area" parent="Player/AsteroidEmitterBase"]

[node name="CollisionShape" type="CollisionShape" parent="Player/AsteroidEmitterBase/Area"]
transform = Transform( 347.526, 0, 0, 0, 347.526, 0, 0, 0, 347.526, 0, 0, 0 )
shape = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.0128104, 0.999918, 0, -0.999918, -0.0128104, -5299.68, 3973.77, 0 )

[node name="RingOfSimbad" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="Player/LifeBoat/AsteroidEmitterFrontal/TimerEmitterFrontal" to="Player/LifeBoat/AsteroidEmitterFrontal" method="_on_TimerEmitterFrontal_timeout"]
[connection signal="timeout" from="Player/AsteroidEmitterBase/TimerEmitter" to="Player/AsteroidEmitterBase" method="_on_Timer_timeout"]
[connection signal="body_exited" from="Player/AsteroidEmitterBase/Area" to="Player/AsteroidEmitterBase" method="_on_Area_body_exited"]
